# DataHubHel

./: .gitignore  .travis.yml  __doc__.txt  create-admin-and-sensor  docker-compose.yml  env.development  env.production.template  kafka_orchestrator.py  ksql-docker.yml  load_connectors  remote_kafka_consumer.py  remote_kafka_producer.py  ta120-emulate
backend/: .gitignore  setup.cfg  tox.ini
backend/datahubhel/: base_models.py  gateway_utils.py  settings.py  urls.py
backend/datahubhel/auth/: __init__.py  apps.py  models.py  (+1 more)
backend/ta120_adapter/: admin.py  apps.py  authentication.py  endpoint.py  models.py  properties.py  serializers.py  signal_handlers.py
backend/utils/: schema_data.avsc  schema_nested_value.avsc
kafka-experiments/: .dockerignore  Dockerfile  README.rst  requirements-stylecheck.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
kafka-experiments/kafka_scripts/: __main__.py  elastic_search_geopoint_template.py  http_response_check.py  initialize_services.py  kafka_utils.py  ksql_scripts.py  load_kafka_connectors.py  open311_consumer.py  sample_producer.py  settings.py  waiting.py
kafka_scripts/: Dockerfile  __init__.py  constants.py  elastic_sink.json  elastic_sink_location.json  env.development  initialize_services.py  ksql_scripts.py  load_kafka_connectors.py  min_sink.json  open311_consumer.py  postgres_sink.json  remote_sink.json  requirements.in  requirements.txt  sample_producer.py
secrets/: 95.216.220.203  ca.pem  client.truststore.jks  schema_registry.cert  schema_registry.truststore.jks  service.cert  service.key
(+57 files in other folders)
