[metadata]
name = datahubhel-kafka-experiments
version = 0.1.0
description = Kafka and KSQL experiments for DataHubHel
long_description = file: README.rst
keywords = kafka, sql, datahubhel
author = Anders Innovations
author_email = support@anders.fi
license = MIT

[options]
packages = find:
install_requires =
    confluent-kafka[avro]
    environs
    httpx
    requests

[options.entry_points]
console_scripts =
    kafka-exp = kafka_scripts.__main__:main

[flake8]
max-complexity = 10

[isort]
multi_line_output = 3
include_trailing_comma = yes
not_skip = __init__.py
skip = .tox,build,dist,venv
known_first_party = kafka_scripts
default_section = THIRDPARTY
